--- a/views/admin/group/detail.twig
+++ b/views/admin/group/detail.twig
@@ -7,7 +7,7 @@
 {% block content %}
     <div class="row">
         {% include 'admin/group/partials/image.twig' %}
-		<div class="col-md-9">
+		<div class="col-md-9" style="padding-right:20px; padding-left:0px;">
 			<div class="panel box-body">
                 {% include 'admin/group/partials/details.twig' %}
 			</div>
