--- a/views/admin/group/member.twig
+++ b/views/admin/group/member.twig
@@ -12,7 +12,11 @@
 	<div class="col-xs-12">
 		<div class="panel panel-default">
 			<div class="panel-body">
+				{% if login.status == 1 %}
 				<form action="{{ path_for('user.group.set') }}" method="POST">
+				{% elseif login.status == 0 %}
+				<form action="{{ path_for('pic.user.group.set') }}" method="POST">
+				{% endif %}
 					<table id="example2" class="table table-bordered table-striped table-hover">
 						<thead>
 							<tr>
