--- a/views/admin/group/partials/details.twig
+++ b/views/admin/group/partials/details.twig
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row" style="padding:20px;">
 	<div class="col-sm-2 col-md-10">
 		<div class="form-group row">
 			<div class="col-md-2">Name </div>
@@ -17,13 +17,29 @@
 		</div>
 	</div>
 </div>
-<div class="caption">
-	<a href="{{ base_url() }}/admin/group/{{ group.id }}/users"
-		class="btn btn-primary btn btn-info btn-md" style="margin-bottom:7px">
-		<b>{{ group.name }} Members</b>
-	</a>
+<div class="caption" style="padding:20px;">
+	{% if login.status == 1 %}
 	<a href="{{ base_url() }}/admin/group/{{ group.id }}/allusers"
 		class="btn btn-primary btn btn-info btn-md" style="margin-bottom:7px">
-		<b>Add member to group</b>
-	</a>
+		<b>Add member to group</b></a>
+
+	<a href="{{ base_url() }}/admin/group/{{ group.id }}/users"
+	class="btn btn-primary btn btn-info btn-md" style="margin-bottom:7px">
+	<b>{{ group.name }} Members</b></a>
+
+	{% elseif login.status == 0 %}
+	<a href="{{ base_url() }}/pic/{{ group.id }}/allusers"
+		class="btn btn-primary btn btn-info btn-md" style="margin-bottom:7px">
+		<b>Add member to group</b></a>
+
+	<a href="{{ base_url() }}/pic/{{ group.id }}/users"
+	class="btn btn-primary btn btn-info btn-md" style="margin-bottom:7px">
+	<b>{{ group.name }} Members</b></a>
+
+	<span class="pull-right">
+	<a href="{{ path_for('pic.item.group', {id: group.id}) }}" style="margin-bottom:7px">
+		<button type="submit" name="pic" value="3" class="btn btn-primary"> My item</button>
+	</a></span>
+
+	{% endif %}
 </div>
