--- a/views/admin/group/partials/image.twig
+++ b/views/admin/group/partials/image.twig
@@ -1,4 +1,4 @@
-<div class="col-md-3">
+<div class="col-md-3" style="padding-right:0px;"">
 	<!-- <div class="panel box-body" > -->
 		<!-- <div class="form-group"> -->
 			<strong>
