--- a/views/users/useritem.twig
+++ b/views/users/useritem.twig
@@ -61,8 +61,13 @@
                 </button></a></a>
             {% endif %}
                 <a href="{{ path_for('user.item.all') }}" class="btn-clear discard-answer dno">
-                    <button class="btn btn-success " type="button">
+                    <button class="btn btn-primary " type="button">
                          <i class="fa fa-plus-circle"></i>   Add Item
+                    </button>
+                </a>
+                <a href="{{ path_for('user.item.create') }}" class="btn-clear discard-answer dno">
+                    <button class="btn btn-primary " type="button">
+                         <i class="fa fa-file"></i>   Create Item
                     </button>
                 </a>
 
